WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28311
[Chromium] DOMWindowEvent custom getter failing on cross frame requests
https://bugs.webkit.org/show_bug.cgi?id=28311
Summary
[Chromium] DOMWindowEvent custom getter failing on cross frame requests
Nate Chapin
Reported
2009-08-14 12:16:10 PDT
r47130
only added proper cross-frame handling to the DOMWindowEvent setter. Need to add it to the getter as well. LayoutTests/fast/events/set-event-in-another-frame.html is currently failing when using V8 because of this.
Attachments
patch
(1.74 KB, patch)
2009-08-14 12:25 PDT
,
Nate Chapin
dglazkov
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nate Chapin
Comment 1
2009-08-14 12:25:36 PDT
Created
attachment 34866
[details]
patch
Dimitri Glazkov (Google)
Comment 2
2009-08-14 12:27:22 PDT
Comment on
attachment 34866
[details]
patch r=me.
Eric Seidel (no email)
Comment 3
2009-08-17 16:26:06 PDT
Comment on
attachment 34866
[details]
patch Nate's a committer, so marking cq-. He can mark it cq+ himself if he'd like the bot to land it for him.
Nate Chapin
Comment 4
2009-08-17 16:32:31 PDT
Once again, I've committed a patch and failed to update the bug :-( Landed at 47293.
Eric Seidel (no email)
Comment 5
2009-08-17 16:37:42 PDT
of course bugzilla-tool land-diff is available to do the landing and bug updating for you if you like. ;)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug