2009-08-14  Nate Chapin  <japhet@chromium.org>

Reviewed by Dimitri Glazkov.

        Ensure we're getting the right v8 context in the V8 DOMWindowEvent custom getter.

        https://bugs.webkit.org/show_bug.cgi?id=28311

        This should fix Chromium failing LayoutTests/fast/events/set-event-in-another-frame.html.

        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        (WebCore::ACCESSOR_GETTER):



Canonical link: https://commits.webkit.org/38894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47293 268f45cc-cd09-0410-ab3c-d52691b4dbfc